gcc/testsuite/rust/rustc/ui/issues/issue-50802.rs
#[allow(unreachable_code)]

fn main() {
    loop {
        break while continue { // { dg-error ".E0590." "" { target *-*-* } }
        }
    }
}

